--- a/requirements.txt
+++ b/requirements.txt
@@ -22,7 +22,6 @@ httpcore==1.0.5
 httpx==0.27.2
 idna==3.10
 iniconfig==2.0.0
-loguru==0.7.2
 magic-filter==1.0.12
 multidict==6.1.0
 packaging==24.1
@@ -45,5 +44,6 @@ SQLAlchemy==2.0.34
 starlette==0.38.5
 tomli==2.0.1
 typing_extensions==4.12.2
+urllib3==2.2.3
 uvicorn==0.30.6
 yarl==1.11.1
